RESOLVED FIXED 250707
[@property] Initial value cleanups
https://bugs.webkit.org/show_bug.cgi?id=250707
Summary [@property] Initial value cleanups
Antti Koivisto
Reported 2023-01-17 05:57:56 PST
Cleanups to initialValue related code.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-17 05:58:20 PST
Antti Koivisto
Comment 2 2023-01-17 06:04:04 PST
EWS
Comment 3 2023-01-17 10:11:25 PST
Committed 258991@main (0e9c19d6b9a6): <https://commits.webkit.org/258991@main> Reviewed commits have been landed. Closing PR #8720 and removing active labels.
Fujii Hironori
Comment 4 2023-01-18 17:21:21 PST
Regressed: Bug 250811 – ASSERTION FAILED: isCustomPropertyName(name) in WebCore::Style::CustomPropertyRegistry::get
Note You need to log in before you can comment on or make changes to this bug.