[@property] Initial value cleanups https://bugs.webkit.org/show_bug.cgi?id=250707 rdar://104330630

Reviewed by Antoine Quint.

* Source/WebCore/animation/CSSPropertyAnimation.cpp:
(WebCore::blendCustomProperty):
(WebCore::CSSPropertyAnimation::propertyRequiresBlendingForAccumulativeIteration):
(WebCore::CSSPropertyAnimation::propertiesEqual):
(WebCore::CSSPropertyAnimation::canPropertyBeInterpolated):
* Source/WebCore/css/CSSRegisteredCustomProperty.cpp:
(WebCore::CSSRegisteredCustomProperty::CSSRegisteredCustomProperty): Deleted.
(WebCore::CSSRegisteredCustomProperty::initialValueCopy const): Deleted.
* Source/WebCore/css/CSSRegisteredCustomProperty.h:
(WebCore::CSSRegisteredCustomProperty::initialValue const): Deleted.

Just make the field public.

* Source/WebCore/css/CSSVariableReferenceValue.cpp:
(WebCore::CSSVariableReferenceValue::resolveVariableReference const):
* Source/WebCore/css/ComputedStyleExtractor.cpp:
(WebCore::ComputedStyleExtractor::customPropertyValue):

Remove the dead leftover code for resolving Length values.

* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::changedCustomPaintWatchedProperty):
(WebCore::RenderStyle::customPropertyValue const):

Handle resolving the initial value for a registered property here. Clients have to provide the registry.

(WebCore::RenderStyle::customPropertyValueWithoutResolvingInitial const):
* Source/WebCore/rendering/style/RenderStyle.h:
(WebCore::RenderStyle::getCustomProperty const): Deleted.
* Source/WebCore/style/CustomPropertyRegistry.cpp:
(WebCore::Style::CustomPropertyRegistry::get const):
(WebCore::Style::CustomPropertyRegistry::isInherited const):
* Source/WebCore/style/CustomPropertyRegistry.h:
* Source/WebCore/style/StyleBuilderCustom.h:
(WebCore::Style::BuilderCustom::applyInitialCustomProperty):

Canonical link: https://commits.webkit.org/258991@main